# orsens

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  uvcvideo.conf
data/calibration/: left_camera_params.yml  right_camera_params.yml
data/ogre/: ogre.cfg  plugins.cfg  plugins_win.cfg  plugins_x64.cfg
include/: EtronDI_O.h  orar.h  orconvert.h  orcv.h  orsens.h
include/OGRE/: OgreBuildSettings.h
include/OGRE/Property/: OgreProperty.h  OgrePropertyPrerequisites.h
include/OIS/: OISPrereqs.h
include/QtCore/: qabstractitemmodel.h  qalgorithms.h  qatomic_cxx11.h  qatomic_gcc.h  qbasicatomic.h  qbitarray.h  qbytearray.h  qcompilerdetection.h  qconfig-large.h  qconfig-medium.h  qconfig-minimal.h  qconfig-nacl.h  qconfig-small.h  qconfig.h  qcoreevent.h  qcryptographichash.h  qdatastream.h  qdatetime.h  qfeatures.h  qfileinfo.h  qflags.h  qfunctions_wince.h  qglobal.h  qglobalstatic.h  qhash.h  qjsonarray.h  qjsondocument.h  qjsonobject.h  qjsonvalue.h  qlibraryinfo.h  qlinkedlist.h  qlist.h  qlocale.h  qlogging.h  qmap.h  qmargins.h  qmetaobject.h  qmetatype.h  qnamespace.h  qobject.h  (+24 more)
include/QtCore/5.1.1/QtCore/private/: cp949codetbl_p.h  qabstractanimation_p.h  qabstracteventdispatcher_p.h  qabstractfileengine_p.h  qabstractitemmodel_p.h  qabstractproxymodel_p.h  qabstractstate_p.h  qabstracttransition_p.h  qanimationgroup_p.h  qbig5codec_p.h  qbytedata_p.h  qcollator_p.h  qcore_mac_p.h  qcore_unix_p.h  qcoreapplication_p.h  qcorecmdlineargs_p.h  qcoreglobaldata_p.h  qcrashhandler_p.h  qdatastream_p.h  qdataurl_p.h  qdatetime_p.h  qdir_p.h  qelfparser_p.h  qeucjpcodec_p.h  qeuckrcodec_p.h  qeventdispatcher_blackberry_p.h  qeventdispatcher_glib_p.h  qeventdispatcher_unix_p.h  qeventdispatcher_win_p.h  qeventloop_p.h  qeventtransition_p.h  qfactoryloader_p.h  qfile_p.h  qfiledevice_p.h  qfileinfo_p.h  qfilesystemengine_p.h  qfilesystementry_p.h  qfilesystemiterator_p.h  qfilesystemmetadata_p.h  qfilesystemwatcher_inotify_p.h  (+94 more)
lib/: Qt5Core.lib  Qt5Gui.lib  Qt5Widgets.lib  aruco125.lib  eSPDI.lib  libaruco.so.1.2.5  liborar.lib  liborbiometrics.lib  liborsens.lib  openbr.lib  opencv_calib3d2410.lib  opencv_core2410.lib  opencv_features2d2410.lib  opencv_highgui2410.lib  opencv_imgproc2410.lib  opencv_objdetect2410.lib
lib/ogre/: OIS.lib
lib/x64/: libaruco.so.1.2  libaruco.so.1.2.5  openbr.lib
lib/x86/vc10/: liborsens.lib
ros/: CMakeLists.txt  package.xml
ros/launch/: orsens.launch  rtabmap_rgbd_slam.launch
ros/src/: orsens_node.cpp
samples/: ar_ogre_sample.cpp  ar_sample.cpp  biometrics_sample.cpp  detection_sample.cbp  detection_sample.cpp  detection_sample.layout  obstacle_avoidance_sample.cpp  pointcloud_sample.cpp  segmentation_sample.cpp  viewer_sample.cpp  vr_sample.cpp
samples/vs_solution/: ar.vcxproj  ar_ogre.vcxproj  biometrics.vcxproj  detection.vcxproj  obstacles.vcxproj  pointcloud.vcxproj  segmentation.vcxproj  viewer.vcxproj  vr.vcxproj  vs_solution.sln  vs_solution.vcxproj  vs_solution.vcxproj.filters
