<?xml version="1.0"?>
<package>
  <name>orsens</name>
  <version>0.1.0</version>
  <description>The orsens package</description>

  <maintainer email="zhukov@oriense.com">zhukov</maintainer>
  <maintainer email="yagubova@oriense.com">yagubova</maintainer>

  <license>MIT-like</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
